# sprog

./: .gitignore  Cargo.toml
glonk/: Cargo.toml
glonk/src/: error.rs  lib.rs  main.rs
glonk/src/auth/: google_auth.rs  mod.rs
glonk/src/store/: mod.rs  sqlitestore.rs
glonk/src/types/: mod.rs  note.rs  user.rs
grundit/: Cargo.toml
grundit/src/: main.rs
lib-glonk/: Cargo.toml
lib-glonk/src/store/: error.rs  mod.rs  sqlitestore.rs
lib-glonk/src/types/: mod.rs
lib-grundit/: Cargo.toml
lib-grundit/src/: app.rs  config.rs  lib.rs
lib-grundit/src/auth/: google_auth.rs  mod.rs
lib-grundit/src/types/: comment.rs  mod.rs  note.rs  punch.rs  user.rs
splunge/: Cargo.toml  Trunk.toml
splunge/console/: Cargo.toml  index.html
splunge/console/src/: main.rs
splunge/home/: Cargo.toml  index.html  index.js
splunge/home/src/: lib.rs
splunge/src/: main.rs
static/auth/: index.html
static/home/: Cargo.toml  build.rs  index.js
static/home/src/: lib.rs
