[package]
name = "glonk"
version = "0.1.0"
edition = "2024"
default-run = "glonk"

[[bin]]
name = "glonk"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower = "0.5.2"
futures-util = "0.3.31"
time = "0.3.41"
sqlite = "0.37.0"

