[package]
name = "lib-grundit"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

axum = { workspace = true, features = ["macros"], optional = true }
axum-extra = { workspace = true, features = ["cookie"], optional = true }
oauth2 = { workspace = true, features = ["reqwest"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
tracing = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
time = { workspace = true, optional = true }
sqlite = { workspace = true, optional = true }

lib-glonk = { path = "../lib-glonk", optional = true }

[features]
full = [ "axum", "axum-extra", "oauth2", "tokio", "tower-http", "tracing-subscriber", "tracing", "tower", "futures-util", "time", "sqlite", "lib-glonk" ]
raw-types = []
