[package]
name = "splunge-console"
version = "0.1.0"
edition = "2024"

[dependencies]
yew.workspace = true
gloo-net.workspace = true
serde.workspace = true
wasm-bindgen-futures.workspace = true
wasm-logger.workspace = true
log = "0.4.27"
lib-grundit = { path = "../../lib-grundit", features = ["raw-types"] }
