[package]
name = "splunge-home"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures.workspace = true
lib-grundit = { path = "../../lib-grundit", features = ["raw-types"] }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true

[dependencies.web-sys]
version = "0.3.77"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'Geolocation',
    'Navigator',
    'Position',
    'Coordinates',
    'DedicatedWorkerGlobalScope',
    'console',
]

