[package]
name = "grundit-home"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
version = "0.3.77"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'DedicatedWorkerGlobalScope',
    'console',
]

